# plotly-dashboard

./: pyproject.toml
src/data/: dataset.py
